Wed Apr 05 07:58:47 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - newhidups:
   * fix the "double free or corruption" crash upon device
     reconnexion (Debian bug #354305)
   * mge-hid: add new models: Evolution, Pulsar, Pulsar M and Pulsar MX

 - mge-shut:
   * harness the LB flag with ShutdownImminent
   * fix some wrong data format, and remove the zero prefix
   * add Comet EX RT 3:1 (without 3 phase data for the moment)
   * add new models: Evolution, Pulsar, Pulsar M and Pulsar MX
   * bump version to 0.66

 - driver.list: completed with the new above compatibilities

Mon Apr 03 02:04:51 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - megatec.c: proper support for 2x12V UPSes.

Thu Mar 30 00:55:46 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - megatec.c: fixed case of blank fields on UPS identification strings.
   Battery voltages are now set by looking at the present value instead
   of the nominal value.

Wed Mar 29 2:50:31 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - megatec: get manufacturer/model/version information. Ressurected
   "ups.temperature". Increased the interval between chars on send.
 - man/megatec.8: added missing test.battery.start description.
 - docs/megatec.txt: documentation about the megatec driver (assimilation of
   the other similar drivers).

Wed Mar 22 20:51:32 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - mge-shut: remove the wrong ups.status setting to OB upon
   communication failure.

   [Alioth Bug #303257]

Tue Mar 21 21:54:34 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - configure.in, drivers/libhid.h, drivers/Makefile.in:
   add Solaris 10 support for newhidups (from Marty Lee and
   George A. Dowding)

Tue Mar 21 19:15:06 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - mge-utalk: add ESV 11+ to Si data table, though it's also
   supported by Si1

Fri Mar 17 12:15:34 EST 2006 / Charles Lepple <clepple@gmail.com>
