@@ -1,3 +1,7 @@
+Wed Apr 05 13:17:51 UTC 2006 / Arjen de Korte <arjen@de-korte.org>
+
+- cpsups.c: fix uninitialized variable (Novell bug #159479)
+
 Wed Apr 05 07:58:47 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>
 
  - newhidups:
